# Foundry-Pay

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/: review-template.yaml  task-template.yaml
.agents/reviews/: FP-AUTH-001.yaml  FP-E2E-001.yaml  FP-FAIL-001.yaml  FP-FAIL-002.yaml  FP-PROTO-007.yaml  FP-REC-001.yaml  FP-SIGN-001.yaml
.agents/tasks/: FP-AUTH-001.yaml  FP-CTRL-001.yaml  FP-DOC-001.yaml  FP-DOC-002.yaml  FP-E2E-001.yaml  FP-FAIL-001.yaml  FP-FAIL-002.yaml  FP-PROTO-001.yaml  FP-PROTO-002.yaml  FP-PROTO-003.yaml  FP-PROTO-007.yaml  FP-REC-001.yaml  FP-SIGN-001.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  EVIDENCE.md  EXTERNAL_EXECUTION_PROTOCOL.md  FAILURE_RECOVERY.md  PROCESS_CHAOS.md  PROGRAM.md  RECONCILIATION.md  WORK_GRAPH.md
docs/ADR/: FP-ADR-001-external-first.md
docs/baselines/: SOLANA_AGENT_6023d78.md
evidence/runs/: FP-AUTH-001.md  FP-CTRL-PR-ZERO.md  FP-PROTO-002.md  FP-PROTO-003.md  FP-PROTO-007.md  FP-SIGN-001.md
provenance/: REPOSITORY_INVENTORY.md  REUSE_LEDGER.yaml  THIRD_PARTY_NOTICES.md
scripts/: check_secrets.py
services/authorization/: __init__.py  authority.py
services/chaos_proxy/: __init__.py  server.py  store.py
services/failure_lab/: __init__.py  lab.py  matrix.py
services/process_chaos/: __init__.py  emulated_upstream.py  matrix.py
services/reconciliation/: __init__.py  backfill.py  protocol.py  solana_rpc.py  sources.py
services/signer/: __init__.py  boundary.py
tests/authorization/: test_execution_authority.py
(+42 files in other folders)
