[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "foundry-external-execution-protocol"
version = "0.1.0"
description = "Protocol contracts for governed external financial execution"
requires-python = ">=3.11"
dependencies = [
  "rfc8785>=0.1.4,<1",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = [
  "packages/external-execution-protocol/python/foundry_external_execution_protocol",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"
